# fund-copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  eval_report.md  pyproject.toml
.claude/: settings.json  settings.local.json
data/sources/: fund_sources.csv
docker/postgres/: init.sql
docs/: FundCopilotDesign.jsx  fund-copilot-plan.md  pdf-sourcing-guide.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AnswerCard.jsx  DocumentBrowser.jsx  FilterBar.jsx  QueryBar.jsx  QueryHistory.jsx  SourceCard.jsx  SourcesPanel.jsx
frontend/src/components/shared/: Badge.jsx  LoadingDots.jsx  Panel.jsx
frontend/src/hooks/: useChat.js  useDocuments.js  useEval.js  useHistory.js
frontend/src/styles/: globals.css
src/: __main__.py
src/api/: main.py  routes_admin.py  routes_chat.py  routes_eval.py  routes_live.py  routes_retrieval.py
src/common/: config.py  db.py  logging.py  schemas.py
src/data_sources/: yahoo_finance.py
src/eval/: metrics.py  runner.py
src/ingest/: chunk.py  clean.py  download.py  embed.py  extract.py  index_keyword.py  index_vector.py  inventory.py  pipeline.py
src/llm/: client.py  grounding.py  prompts.py
src/retrieval/: filters.py  hybrid.py  keyword_search.py  service.py  vector_search.py
tests/: conftest.py  test_chunk.py  test_clean.py  test_extract.py  test_grounding.py  test_health.py  test_hybrid_search.py
