[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-copilot"
version = "0.1.0"
description = "Local-first RAG system for UK/Ireland UCITS fund documents"
requires-python = ">=3.10"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Data validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    # HTTP client (Ollama calls, PDF downloads)
    "httpx>=0.28.0",
    # Logging
    "structlog>=25.1.0",
    # PDF processing (Phase 1)
    "pymupdf>=1.25.0",
    # Tokenization (Phase 1)
    "tiktoken>=0.9.0",
    # Embeddings (Phase 1)
    "sentence-transformers>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
fund-copilot = "src.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
